Fixed text responsiveness and footer alignment 4/01/2020

--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -68,6 +68,13 @@
   padding-bottom: 10px;
 }
 
+ @media (min-width: 1200px) {
+    .footer-links{
+    text-align: center;
+    }
+  }
+
+
 #footer .footer-top .footer-links {
   margin-bottom: 30px;
 }
