--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -59,13 +59,27 @@ p {
     font-size: 1rem;
     font-weight: 800;
   }
+
   .section-heading-lower {
     display: block;
-    font-size: 3rem;
+    //font-size: 3rem;
     font-weight: 500;
+  }
+}
+
+@media screen and (min-width: 601px) {
+  .section-heading-lower {
+    font-size: 3rem;
+  }
+}
+
+@media screen and (max-width: 600px) {
+ .section-heading-lower {
+    font-size: 30px;
   }
 }
 
 .bg-faded {
   background-color: fade-out($pastelgreen, 0.15);
 }
+
